[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
# these versions are locked to keep tests consistent
tokio = { version = "1.52.3", features=["full"] }
futures = "0.3.32"

# for config file
serde = { version="*", features = ["derive"]}
serde_json = "*"

# for rwlock random read/write
rand = "*"

[features]
log_contention = []